--- a/client/src/components/About.css
+++ b/client/src/components/About.css
@@ -42,7 +42,7 @@
 
 @media screen and (max-width: 960px) {
   .about_container {
-    padding: 20px 50px;
+    padding: 20px 50px 0;
   }
 
   .about_content {
@@ -63,7 +63,7 @@
   }
 
   .about_container {
-    padding: 20px 30px;
+    padding: 20px 30px 0;
   }
 
   .about_img {
