--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -10,7 +10,6 @@
 .navlink,
 .logo {
   text-decoration: none;
-  color: var(--primary-color);
 }
 
 .navbar {
@@ -119,7 +118,7 @@
   .navbar {
     z-index: 2;
     position: fixed;
-    background-color: white;
+    background-color: #c1c1c1;
     width: 100%;
     height: 100vh;
     flex-direction: column;
@@ -133,5 +132,5 @@
   }
 }
 
-@media screen and (max-width: 420px) {
-}
+/* @media screen and (max-width: 420px) {
+} */
