--- a/client/src/components/Reminders.css
+++ b/client/src/components/Reminders.css
@@ -5,7 +5,7 @@
 
 .reminders_container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   grid-gap: 1rem;
   grid-auto-rows: auto;
 }
