--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -118,7 +118,7 @@
   .navbar {
     z-index: 2;
     position: fixed;
-    background-color: #c1c1c1;
+    background-color: white;
     width: 100%;
     height: 100vh;
     flex-direction: column;
